fix too long name in Multi Authoren card

--- a/src/TrueOrFalse.Frontend.Web/Style/sidebar.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/sidebar.less
@@ -168,6 +168,15 @@
                 display: flex;
                 justify-content: center;
             }
+
+            #UserNameSideBarMulti {
+                max-width: 153px;
+            }
+
+            #InnerLinkSpan {
+                text-overflow: ellipsis;
+                overflow: hidden;
+            }
         }
     }
 
